# call-hermes

./: .gitignore  CLAUDE.md  README.md
deploy/: Caddyfile  docker-compose.yml  turnserver.conf
scripts/: auth.sh  check_config.sh  check_turn.sh  health.sh  run_http.sh  run_https.sh  run_turn.sh  smoke_pwa_turn.py  start_https_443.sh  start_https_background.sh  stop_https.sh
server/: .env.example  Dockerfile  pyproject.toml
server/app/: auth.py  config.py  events.py  logging_config.py  main.py  rate_limit.py
server/app/bridge/: audio.py  session.py
server/app/integrations/: asr.py  hermes.py  tts.py  tts_normalize.py
server/app/pwa/: audio.py  routes.py  service.py  trace.py
server/app/static/: app.js  auth.js  client-log.js  events.js  index.html  manifest.webmanifest  reset.html  rtc.js  styles.css  sw.js  ui.js
server/tests/: test_audio_track.py  test_auth.py  test_client_log.py  test_debug_text.py  test_rtc_settings.py  test_text_flush.py  test_tts_normalize.py
