[project]
name = "call-hermes-voice-bridge"
version = "0.1.0"
description = "FastAPI WebRTC voice bridge for iPhone to Hermes via Bailian ASR/TTS"
requires-python = ">=3.11"
dependencies = [
  "aiortc>=1.9.0",
  "av>=12.0.0",
  "dashscope>=1.25.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "PyJWT>=2.8.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
